商品新規登録

--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,1 +1,13 @@
 <h1>商品登録</h1>
+<%= form_with model: @item, url: admin_items_path do |f| %>
+<%=  f.file_field :image, accept: "image/*"  %>
+      <h3>商品名          <%= f.text_field :name %></h3>
+      <h3>商品説明        <%= f.text_area :introduction %></h3>
+     
+      <h3>税抜価格        <%= f.number_field :price %>円</h3>
+      <h3>販売ステータス   <%= f.radio_button :is_active, :on_sale, checked: "checked"%>
+       <%= f.label :is_active, "販売中", {value: :"0", style: "display: inline-block;"} %>
+       <%= f.radio_button :is_active, :off_sale %>
+       <%= f.label :is_active, "販売停止中", {value: :"1", style: "display: inline-block;"} %></h3>
+      <%= f.submit '新規登録', class: "btn btn-primary" %>
+<% end %>
