admin/customerのcontrollerのみ作成、モデルはまだ

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,39 @@
   </head>
 
   <body>
+    <header>
+    <ul class="navbar-nav nav justify-content-end mr-sm-2">
+        <% if customer_signed_in? %>
+
+
+          <li class="nav-item">
+            <%= link_to "ログアウト", destroy_customer_session_path(current_customer), method: :delete, class: "nav-link fas fa-sign-out-alt" %>
+          </li>
+        <% elsif admin_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "商品一覧", admin_items_path, class: "nav-link fas fa-cookie" %>
+          </li>
+
+          <li class="nav-item">
+            <%= link_to "商品登録", new_admin_item_path, class: "nav-link fas" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "nav-link fas fa-sign-out-alt" %>
+          </li>
+
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "ログイン", new_customer_session_path, class: "nav-link fas fa-sign-in-alt" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "新規登録", new_customer_registration_path, class: "nav-link fas fa-user-plus" %>
+          </li>
+        <% end %>
+      </ul>
+      </div>
+    </nav>
+
+</header>
     <%= yield %>
   </body>
 </html>
