--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<h1>会員一覧</h1>
+<table>
+  <tr>
+    <th>会員ID</th>
+    <th>氏名</th>
+    <th>メールアドレス</th>
+    <th>ステータス</th>
+  </tr>
+  <% @customers.each do |customer| %>
+  <tr>
+    <td><%= customer.id %></td>
+    <td><%= link_to customer.full_name, admin_customer_path(customer.id) %></td>
+    <td><%= customer.email %></td>
+    <td><% if customer.is_deleted %>
+    有効
+    <% else %>
+    無効
+    <% end %>
+    </td>
+  </tr>
+<% end %>
