--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -11,10 +11,10 @@
     <div>
       ￥<%= @item.price %>(税込)
     </div>
-    <%= form_with model: @item, url: items_path do |f| %>
+    <%= form_with model: @cart_item, url: cart_items_path do |f| %>
       <%= f.hidden_field :item_id, :value => @item.id %>
       <%= f.select :amount, *[1..10],  {include_blank: '個数選択'}%>
-      <%= f.submit '保存', class: "btn btn-primary" %>
+      <%= f.submit 'カートに追加', class: "btn btn-primary" %>
     <% end %>
 
   </div>
