--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,24 +1,33 @@
+<h2>ショッピングカート</h2>
+<%= link_to "カートを空にする", destroy_all_cart_items_path, method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-danger" %>
 <table>
   <thead>
       <th>商品名</th>
       <th>単価(税込)</th>
       <th>個数</th>
       <th>小計</th>
+      <th></th>
+      <th>合計</th>
   </thead>
   <tbody>
   <% @cart_items.each do |cart_item| %>
       <tr>
           <td><%= cart_item.item.name %></td>
-          <td><%= (cart_item.item.price * 1.1).floor %></td>
-          <td><%= (cart_item.item.price * 1.1).floor * cart_item.amount %></td>
+          <td><%= cart_item.item.with_tax_price %></td>
+
           <td>
             <%= form_with model: @item, url: items_path do |f| %>
              <%= f.select :amount, *[1..10] %>
              <%= f.submit "変更" %>
             <% end %>
           </td>
-          <% @total +=  (cart_item.item.price * 1.1).floor * cart_item.amount %>
+          <td><%= cart_item.subtotal %></td>
+          <td><%= link_to "削除する", cart_item_path(cart_item.id), method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+          <td><% @total +=  cart_item.subtotal %>
+              <%= @total %>
+          </td>
       </tr>
   <% end %>
   </tbody>
+  <%= link_to "買い物を続ける", items_path , class: "btn btn-danger" %>
 </table>
