注文情報確認

--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -9,4 +9,4 @@
       <h3>メールアドレス  <%= f.text_field :email %></h3>
       <%= f.submit '編集内容を保存', class: "btn btn-primary" %>
 <% end %>
- <%= link_to "退会する", items_path , class: "btn btn-danger" %>
+ <%= link_to "退会する", confirm_path , class: "btn btn-danger" %>
