--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>配送先編集</h1>
-<%= form_with model: @address, url: addresses_path do |f| %>
+<%= form_with model: @address, url: address_path do |f| %>
 
       <h3>郵便番号        <%= f.number_field :postal_code %>円</h3>
       <h3>住所            <%= f.text_field :address %></h3>
