--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -31,3 +31,4 @@
   </tbody>
   <%= link_to "買い物を続ける", items_path , class: "btn btn-danger" %>
 </table>
+<%= link_to "注文手続きへ", new_order_path, class: "btn btn-primary mt-3" %>
