--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,9 +1,41 @@
 <h1>注文情報入力</h1>
-<%= form_with model: @order, url: orders_path do |f| %>
+<%= form_with model: @order, url: orders_confirm_path do |f| %>
 <div class="form-group">
     <div class="lead mb-2">支払い方法</div>
-    <%= f.radio_button :payment_method, "credit_card" %>
-    <%= f.label :payment_method, "クレジットカード" %>　　
-    <%= f.radio_button :payment_method, "transfer" %>
-    <%= f.label :payment_method, "銀行振込" %>
+    <%= f.radio_button :payment_method, Order.payment_methods.key(0) %>
+    <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card] %>
+
+    <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+    <%= f.label :payment_method, Order.payment_methods_i18n[:transfer]%>
     </div>
+    <div>
+     <div class="lead mb-2">お届け先</div>
+
+     <% if current_customer.address %>
+        <%= f.radio_button :address_select, 0 %>
+        <%= f.label :ご自身の住所 %>
+        <%= current_customer.address_display %>
+     <% end %></br>
+     <%= f.radio_button :address_select, 1 %>
+     <%= f.label :登録済住所から選択 %><br>
+     <%= f.select :address_id, options_from_collection_for_select(Address.all, :id, :address_display) %>
+    </div>
+     <div><%= f.radio_button :address_select, 2 %>新しいお届け先</div>
+
+    <div class="form-group has-icon">
+      <%= f.label :"郵便番号(ハイフンなし)" %>
+      <%= f.text_field :postal_code, class:"form-control" %>
+    </div>
+    <div class="form-group has-icon">
+      <%= f.label :住所 %>
+      <%= f.text_field :address, class:"form-control" %>
+    </div>
+    <div class="form-group has-icon">
+      <%= f.label :氏名%>
+      <%= f.text_field :name, class:"form-control" %>
+    </div>
+  　<%= f.submit "確認画面へ進む", class:"btn btn-primary btn-block btn-base-1 mt-20" %>
+  <% end %>
+
+
+
