--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -24,7 +24,7 @@
           <td><% @total += cart_item.subtotal %>
               <%= @total %>
           </td>
-          <td><%= @total+800 %></td>
+          <td><%= @total+@postage %></td>
       </tr>
   <% end %>
   </tbody>
