--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -22,15 +22,15 @@
     </div>
      <div><%= f.radio_button :address_select, 2 %>新しいお届け先</div>
 
-    <div class="form-group has-icon">
+    <div>
       <%= f.label :"郵便番号(ハイフンなし)" %>
       <%= f.text_field :postal_code, class:"form-control" %>
     </div>
-    <div class="form-group has-icon">
+    <div>
       <%= f.label :住所 %>
       <%= f.text_field :address, class:"form-control" %>
     </div>
-    <div class="form-group has-icon">
+    <div>
       <%= f.label :氏名%>
       <%= f.text_field :name, class:"form-control" %>
     </div>
