--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -21,12 +21,12 @@
 
     <tr>
         <th>販売ステータス</th>
-        <td><% if @item.is_active %>
+        <td><% if item.is_active %>
         販売中
         <% else %>
         販売停止中
         <% end %>
-        </td>
+    　　</td>
     </tr>
     </table>
     <%= link_to "編集する", edit_admin_item_path(@item) %>
